Resolve overlap light sticky menu button colour

--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ a {
     width: 23px; }
     #mobile-menu-button svg path {
       fill: #2d2d2d; }
-      .overlap-light #mobile-menu-button svg path {
+      .overlap-light .site-header:not(.stuck) #mobile-menu-button svg path {
         fill: #fff; }
 
 #mobile-navigation {
